Fix search icon too small

--- a/public/themes/custom/julkaisut/assets/styles/components/form.scss
+++ b/public/themes/custom/julkaisut/assets/styles/components/form.scss
@@ -62,15 +62,16 @@
 .form-type-search-api-autocomplete {
   position: relative;
 
+  &,
+  .hds-icon {
+    --icon-size: 24px;
+  }
+
   > [type="submit"],
   > .hds-icon {
     position: absolute;
     margin-left: calc(var(--icon-size) * -1 - var(--spacing-xs));
-    bottom: calc((var(--input-height) - var(--icon-size)) / 2);
+    bottom: calc((var(--input-height) - var(--icon-size)) / 2 - 2px);
     color: var(--input-color-default);
-  }
-
-  .hds-icon {
-    --icon-size: 16px;
   }
 }
